--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@tanstack/react-query": "^5.83.0",
-    "add": "^2.0.6",
     "bcryptjs": "^3.0.2",
+    "better-auth": "^1.3.5",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "hono": "^4.8.10",
