wip: untitled ui migration (input,button,label)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,9 @@
   "editor.formatOnSave": true,
   "editor.formatOnPaste": false,
   "css.validate": false,
-  // "tailwindCSS.experimental.classRegex": [
-  //   ["([\"'`][^\"'`]*.*?[\"'`])", "[\"'`]([^\"'`]*).*?[\"'`]"]
-  // ],
+  "tailwindCSS.experimental.classRegex": [
+    ["tv\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"]
+  ],
   "[prisma]": {
     "editor.defaultFormatter": "Prisma.prisma"
   }
