--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "taptree",
+  "name": "tapptree",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -43,6 +43,7 @@
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^2.0.1",
+    "twmx": "^0.0.2",
     "zod": "^4.0.14",
     "zustand": "^5.0.8"
   },
