--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^2.0.1",
     "twmx": "^0.0.2",
+    "uqr": "^0.1.2",
     "zod": "^4.0.14",
     "zustand": "^5.0.8"
   },
@@ -63,6 +64,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "prisma": "^6.13.0",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4",
     "tsx": "^4.20.3",
     "typescript": "^5"
